
BUGS AND TODOS
--------------
general:
  * @todo export script
  * @todo this day in readmill script
  * @todo advanced search engine
  * @bug center small book images: http://www.disobey.com/detergent/code/readmilling/scripts/book-comments.php?title=accelerando&author=charles+stross
  * @todo consider switching the default books to literature instead of technocentric.
  * @todo we probably need to htmlentities everything we’re spitting out to be safe.
  * @todo And see what you can do about moving them to htmlspecialchars instead.
  * @todo Fix display of all scripts when bad API key or no data returned.
  * @todo add Morbus Iff block to add pages.
  * @todo add full name matching in user/search (for david kjelkerud).

user-export.php:
  * reading periods are not supported yet.
  * closing comments are not supported yet.
  * ideally should use oAuth for private data export.

book-comments.php:
  * @todo add closing comments
  * @todo add a no_merging=1 flag for debugging/example purposes.
  * @todo replace our custom comment permalink with highlight permalink?
  * @todo No data message?

book-updates.php:
  * @todo add to changelog and readme
  * @todo add to front page
  * @todo add closing comments
  * @todo No data message?

user-updates.php:
  * @todo add to changelog and readme
  * @todo add to front page
  * @todo write up sidebar intro
  * @todo add RSS export and icon/sniff thing.
  * @todo fill in your @todos. heh.
  * @todo No data message?
  * @todo note new api hooks for user_ lookups.


VERSION 0.2, 2014-XX-XX
-----------------------
  * Removed a ton of duplicate code from common.inc.
  * All settings have been changed to hyphens, not underscores.
  * Switched over to Readmill's "pagination" API support.
  * Fetch all highlights per reading, not just the first 100.
  * Scripts can now (dangerously) ignore caching for certain requests.
  * All caches now default to expiring after one day. We'll try it out.


VERSION 0.1, 2013-02-22